fixed the icons alignment problem

--- a/web-app/less/app-posts.less
+++ b/web-app/less/app-posts.less
@@ -232,6 +232,9 @@
     position: absolute;
     top: 10px;
     width: 50px;
+    i {
+      vertical-align: top;
+    }
     .inactive {
       background-color: #f0f0f0;
     }
@@ -262,6 +265,7 @@
   .type-item-1-2 {
     background: #ccc;
     .border-top-right-radius(6px);
+    margin: 0 0 2px 0;
   }
   .type-item-2-1 {
     background: #ccc;
